tests/syntax/bad/testfile-if1-1.scala
class A { def m() { if () ; } }
object Main { def main(args: Array[String]) { } }
